# text2sql

./: .env.example  .gitignore  Makefile  README.md  make.cmd  pytest.ini  t2sql.cmd  t2sql.ps1
.github/workflows/: ci.yml
compose/: 00-network.yml  10-state.yml  20-platform.yml  30-data.yml  31-datahub.yml  40-capability.yml  50-app.yml  60-hitl.yml  70-observability.yml  80-portal.yml  README.md
config/alertmanager/: alertmanager.yml
config/cube/: cube.js
config/litellm/: config.yaml
config/loki/: loki-config.yml
docs/: Architecture.md  CHANGELOG.md  L3-UIs.md  NAMING.md  project-intro.html  slice-template.md
langfuse-image/: README.md  parts.sha256
presentation/: README.md  index.en.html  index.html
scripts/: deploy-to-ubuntu.ps1  server-down.sh  server-restart.sh  server-up.sh  smoke-query.json
src/services/langgraph-app/: Dockerfile  pyproject.toml
src/services/langgraph-app/app/: __init__.py  capability.py  graph.py  main.py  metrics.py  observability.py  schema_catalog.py  settings.py
src/services/langgraph-app/app/clients/: argilla_client.py  chat_store.py  langfuse_client.py  litellm.py  opa_client.py  pgvector_store.py  presidio_client.py  tei_client.py  trino_client.py
src/services/langgraph-app/app/nodes/: execute.py  explain.py  opa_check.py  output_mask.py  pii_guard.py  schema_link.py  sql_generate.py  sql_validate.py
src/services/langgraph-app/tests/: conftest.py
src/services/langgraph-app/tests/unit/: test_feedback.py  test_graph_runner.py  test_metrics.py  test_opa_check.py  test_output_mask_and_explain.py  test_pii_guard.py  test_schema_link.py  test_security_redteam.py  test_sql_validate.py
(+87 files in other folders)
