[project]
name = "text2sql-langgraph-app"
version = "0.1.0"
description = "LangGraph-based orchestration service for Text-to-SQL (Phase 1 walking skeleton)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "openai>=1.40",        # used as OpenAI-compatible client → LiteLLM
    "trino>=0.330",
    "sqlglot>=25",
    # Pin to v2.x: wire-compatible with the self-hosted langfuse/langfuse:2
    # server. SDK >= 3.x is OTel-based and breaks against the v2 server's
    # /api/public/projects schema (missing `organization`/`metadata` fields)
    # which causes pydantic validation errors on auth_check and ingest.
    "langfuse>=2.50,<3",
    "structlog>=24",
    "asyncpg>=0.29",       # Phase 2: pgvector async access
    # ---- Phase 4 (observability) ----
    "prometheus-client>=0.20",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "respx>=0.21",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "walking_skeleton: end-to-end test requiring full Phase 1 stack",
    "e2e: any test requiring live services",
]
